kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: revolution-x
  labels:
    name: revolution-x
    environment: production
